[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Scenes Scripts/Connecter.gd" type="Script" id=1]

[node name="Connecter" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="server_adress_input" type="LineEdit" parent="CanvasLayer"]
margin_left = 186.0
margin_top = 258.0
margin_right = 374.0
margin_bottom = 282.0
text = "web3.deremble.name"
clear_button_enabled = true
placeholder_text = "Server Adress"

[node name="server_port_input" type="SpinBox" parent="CanvasLayer"]
margin_left = 187.0
margin_top = 287.0
margin_right = 373.0
margin_bottom = 311.0
max_value = 1e+06
value = 25566.0
rounded = true

[node name="connect_server_button" type="Button" parent="CanvasLayer"]
margin_left = 402.0
margin_top = 278.0
margin_right = 466.0
margin_bottom = 298.0
text = "Connect"

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 284.0
margin_top = 124.0
margin_right = 403.0
margin_bottom = 138.0
text = "Please connect to a server in order to play the game"

[node name="Offline_button" type="Button" parent="CanvasLayer"]
margin_left = 32.0
margin_top = 554.0
margin_right = 117.0
margin_bottom = 574.0
text = "Play Offline"

[connection signal="pressed" from="CanvasLayer/connect_server_button" to="." method="_on_connect_server_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Offline_button" to="." method="_on_Offline_button_pressed"]
